RESOLVED FIXED284146
FontCustomPlatformSerializedData shouldn't copy fontFaceData buffer
https://bugs.webkit.org/show_bug.cgi?id=284146
Summary FontCustomPlatformSerializedData shouldn't copy fontFaceData buffer
Fujii Hironori
Reported 2024-12-05 20:32:48 PST
FontCustomPlatformSerializedData shouldn't copy fontFaceData buffer
Attachments
Fujii Hironori
Comment 1 2024-12-05 20:35:15 PST
EWS
Comment 2 2024-12-06 17:08:06 PST
Committed 287480@main (a793b6dee90d): <https://commits.webkit.org/287480@main> Reviewed commits have been landed. Closing PR #37529 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-12-06 17:09:12 PST
Note You need to log in before you can comment on or make changes to this bug.